# ai-analog-navigator-backend

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/commands/: code-review.md  (+1 more)
app/: config.py  main.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/endpoints/: health.py  metrics.py  rag_query.py  search.py  transcription.py  tts.py
backend/app/core/: middleware.py
backend/app/data/: domain_terms.json  tts_terms.json
backend/app/evaluation/: __init__.py  correction_eval_results_20251218_141747.json  correction_eval_results_20251218_141830.json  correction_eval_set.jsonl  gold_labels.json  metrics.py  perf_results_20251218_140204.json  query_set.jsonl  results_20251120_130802.json  run_correction_eval.py  run_e2e_perf_eval.py  run_offline_eval.py
backend/app/evaluation/metrics/: metrics_20251218_132235.jsonl  metrics_20251218_132945.jsonl
backend/app/scripts/: ingest_to_db.py  scrape_pages.py  test_vector_search.py
backend/app/scripts/utils/: chunker.py  clean_text.py  parsers.py
backend/app/services/: audio_processing_service.py  db_service.py  embedding_service.py  lm_studio_service.py  metrics_service.py  rag_service.py  transcription_corrector.py  tts_service.py  whisper_service.py
backend/migrations/: 001_init_vector_db.sql  002_add_fulltext_search.sql  README.md  test_vector_search.sql
backend/tests/: test_transcription_corrector.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
scripts/: test_client.py
(+26 files in other folders)
