[project]
name = "ai-analog-navigator-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.119.1",
    "pydantic==2.12.3",
    "uvicorn==0.32.1",
    "openai-whisper>=20231117",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "aiofiles>=23.2.0",
    "python-ffmpeg>=2.0.12",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tiktoken>=0.5.0",
    "psycopg2-binary>=2.9.0",
    "faster-whisper>=1.2.1",
    "python-levenshtein>=0.27.3",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
]
